--- a/css/about.css
+++ b/css/about.css
@@ -1,11 +1,12 @@
 .contain{
     float:left;
+    display:flex;
 
 }
 
 .col-sm-4 img{
     height:300px;
-    width:100%;
+    width:80%;
     margin:30px 30px 30px 30px;
 }.col-sm-4{
     width:50%;
@@ -14,5 +15,6 @@
 .col-sm-8{
     float:right;
     width:50%;
-    margin-top:30px;
+    margin:30px 30px30px 30px ;
+    height:300px;
 }
