--- a/css/login.css
+++ b/css/login.css
@@ -12,6 +12,8 @@
     display: flex;
     width: 50%;
     height: 100px;
+    position: absolute;
+    justify-content: center;
     
 }
 .col-sm-6 .account-type .user img{
@@ -22,4 +24,33 @@ width:100px;
     height:100px;
     width:100px;
     }
-    
+.col-sm-6 .account-type .hawker{
+padding-left: 15px;
+    } 
+.form-center {
+        display:flex;
+        justify-content: center;
+        margin-top: 30px;
+
+    }
+/* .container {
+        height: 200px;
+        position: relative;
+        border: 3px solid green;
+    } */
+      
+.center {
+        margin-top: 120px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        border: 1px solid black;
+        background-color: #0f1010;
+        color: black;
+        border-radius: 5px
+    }
+.Login {
+margin-top: 200px;
+}  
