--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,7 @@
     justify-content: center;
     margin:auto;
     height:550px;
+    margin-top:100px;
 
 }
 .col-sm-6 h2{text-align: center;}
@@ -40,7 +41,7 @@ padding-left: 15px;
     } */
       
 .center {
-        margin-top: 72px;
+        margin-top: 130px;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -58,3 +59,7 @@ padding-left: 15px;
 .Login {
 margin-top: 200px;
 }  
+
+.newuser{
+    text-align: center;
+}
